tests/files/type_checker_tests/should_pass/029.cmdr
//Test bindings type check
x: (int, int) -> int = fn (a, b) -> a + b;
y = x;
