tests/files/type_checker_tests/should_fail/059.cmdr
//Should fail if return bindings don't match return type
fn foo(x: int, y: float): void {
    return x + y;
}
